MODON MRE BPDEV/force-app/main/default/objects/BP_OmniApproval_Grid_Config__mdt/BP_OmniApproval_Grid_Config__mdt.object-meta.xml
<CustomObject>
    <label>BP OmniApproval Grid Config</label>
    <pluralLabel>BP OmniApproval Grid Configs</pluralLabel>
</CustomObject>