MODON MRE BPDEV/force-app/main/default/objects/BP_OmniApproval_Grid_Config__mdt/fields/BP_Type__c.field-meta.xml
<CustomField>
    <fullName>BP_Type__c</fullName>
    <label>BP Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>