MODON MRE BPDEV/force-app/main/default/objects/BP_OmniApproval_Grid_Config__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field_Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>