MODON MRE BPDEV/force-app/main/default/objects/BP_OmniApproval_Grid_Config__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>