MODON MRE BPDEV/force-app/main/default/objects/BP_OmniApproval_Grid_Config__mdt/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <label>Step Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>